...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Z3g-uO-fH2">
                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qO4-RN-N3E">
                                <rect key="frame" x="16" y="647.66666666666663" width="361" height="46.333333333333371"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Войти">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
                                    <directionalEdgeInsets key="contentInsets" top="13" leading="0.0" bottom="13" trailing="0.0"/>
                                    <color key="baseForegroundColor" name="YP Black"/>
                                    <color key="baseBackgroundColor" name="YP White"/>
                                </buttonConfiguration>
                                <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JaH-9R-0u2">
                                <rect key="frame" x="8" y="67" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="VR1-t5-b2H"/>
                                    <constraint firstAttribute="height" constant="48" id="kUO-zC-AvF"/>
                                </constraints>
                                <buttonConfiguration key="configuration" style="plain" image="Backward"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="YOd-WQ-sCO" eventType="touchUpInside" id="jI6-qh-hUi"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="njB-IX-uHu">
                                <rect key="frame" x="171.66666666666666" y="751" width="50" height="50"/>
...
